# openapi/用户模块.openapi.yaml
@@ -279,6 +279,12 @@ paths:
           schema:
             type: string
             default: desc
+        - name: userPhone
+          in: query
+          description: 手机号
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: OK
@@ -354,6 +360,32 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/BaseResponseLoginUserVO'
+          headers: {}
+      security: []
+  /user/{id}/reset-password:
+    post:
+      summary: 重置用户密码
+      deprecated: false
+      description: 管理员重置用户密码为123456
+      operationId: resetUserPassword
+      tags:
+        - 用户管理
+      parameters:
+        - name: id
+          in: path
+          description: 用户ID
+          required: true
+          example: 0
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/BaseResponseBoolean'
           headers: {}
       security: []
 components:
@@ -506,6 +538,8 @@ components:
         registerTime:
           type: string
           format: date-time
+        userPhone:
+          type: string
     UserAddRequest:
       type: object
       description: 用户创建信息
